# tibetan-translator

./: .cursorignore  .gitignore  .prettierrc  .tool-versions  CLAUDE.md  README.md  babel.config.js  electron-builder.js  index.html  package.json  pnpm-lock.yaml  popup.html  vite.config.mjs  vitest.config.mjs  vue.config.js
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml  update-packs.yml
.serena/: project.yml
.serena/memories/: desktop-vs-mobile-architecture.md  project-commands.md
assets/css/: custom.css  main.css
docs/: dictionaries-abbreviations-list.updated-but-broken.js  favicon bigger magnifying glass.xcf  favicon colorized with squircle.psd  favicon colorized with squircle.xcf  favicon.xcf  favicon_bg.xcf  js-to-vue.py  wip-tokenized-search-terms.js  wylie-lines-with-mistakes.txt
public/: README.md  botok-dictionary.json  index.html  site.webmanifest  sql-wasm.wasm
public/packs/: pack-manifest.json
scripts/: bump-version.js  check-tauri-versions.js  modifyFontFilepath.js  sync-dictionaries.mjs
src/: background.js  main.js  popup.js  router.js  utils.js  utils.umd.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: custom_packs.rs  database.rs  lib.rs  main.rs  packs.rs  scans.rs
src/components/: App.vue  ConfigurePage.vue  CustomPackConflictModal.vue  CustomPackSection.vue  DefinePage.vue  DefinePageHelpDialogWithButton.vue  DictionariesDetailsMixin.js  DictionariesFuzzySearchMixin.js  DictionariesMenuHelpTab.vue  DictionariesMenuMixin.js  DropZone.vue  Entries.vue  EntriesEntry.vue  GlobalLookupPopup.vue  GlobalLookupWindow.vue  OnboardingScreen.vue  PackManagerCard.vue  ResizableDivider.vue  ScanViewer.vue  SearchBuilder.vue  (+27 more)
tests/: apkg-reader.test.js  build-tibdict-sqlite.test.js  copy-service.test.js  custom-pack-importer.test.js  mixins.test.js  navigation-state.test.js  normalize-entries.test.js  pack-schema.test.js  phonetic-search-service.test.js  phonetics-generation.test.js  search-builder.test.js  search-query.test.js  setup.js  storage.test.js  tibdict-writer.test.js  word-splitting.js
(+98 files in other folders)
