[package]
name = "TibetanTranslator"
version = "0.9.1"
description = "An attempt at providing access to the best Tibetan dictionaries in a pleasant interface for all devices."
authors = ["Lekshe (Jeremy FRERE)"]
license = "MIT"
repository = "https://github.com/jerefrer/tibetan-translator"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = [] }
