[package]
name = "TibetanTranslator"
version = "1.4.0"
description = "An attempt at providing access to the best Tibetan dictionaries in a pleasant interface for all devices."
authors = ["Lekshe (Jeremy FRERE)"]
license = "MIT"
repository = "https://github.com/jerefrer/tibetan-translator"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-fs = "2"
open = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
sevenz-rust2 = "0.20"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
